--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "botkit": "~0.1.1"
+    "botkit": "^0.1.2",
+    "mongodb": "^2.2.26"
   }
 }
