--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "botkit": "^0.5.4",
     "mongodb": "^2.2.26",
-    "mongoose": "^4.9.8"
+    "mongoose": "^4.9.8",
+    "node-wit": "^4.2.0"
   }
 }
