--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   },
   "dependencies": {
     "botkit": "^0.5.4",
+    "express": "^4.15.3",
     "mongodb": "^2.2.26",
     "mongoose": "^4.9.8",
-    "node-wit": "^4.2.0"
+    "node-wit": "^4.2.0",
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3"
   }
 }
