--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "mongodb": "^2.2.26",
     "mongoose": "^4.9.8",
     "node-wit": "^4.2.0",
-    "socket.io": "^2.0.3",
-    "socket.io-client": "^2.0.3"
+    "nodejs-websocket": "^1.7.1"
   }
 }
