Add docker configuration

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongodb": "^2.2.26",
     "mongoose": "^4.9.8",
     "node-wit": "^4.2.0",
-    "nodejs-websocket": "^1.7.1"
+    "nodejs-websocket": "^1.7.1",
+    "nodemon": "^1.11.0"
   }
 }
