--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,21 +3,10 @@ version: '2'
 services:
   db:
     image: "mongo:latest"
-    networks:
-      - proxy
 
-
-  wewash-release:
+  bot:
     build: .
-    container_name: ${CONTAINER_NAME}
     links:
       - db:mongo
     depends_on:
       - db
-    networks:
-      - proxy
-
-networks:
-  proxy:
-    external:
-      name: motius_proxy
