--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   db:
     image: "mongo:latest"
     networks:
-      - python
+      - proxy
       
   bot:
     build: .
@@ -13,7 +13,7 @@ services:
     depends_on:
       - db
     networks:
-      - python
+      - proxy
 
 networks:
   proxy:
