--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A bot for employee onboarding",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "botkit": "^0.5.4",
