--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.15.3",
     "mongodb": "^2.2.26",
     "mongoose": "^4.9.8",
+    "node-cron": "^1.2.1",
     "node-wit": "^4.3.0",
     "nodejs-websocket": "^1.7.1",
     "nodemon": "^1.11.0",
