--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ stages:
 
 variables:
    COMPOSE_PROJECT_NAME: $CI_PROJECT_NAME-$CI_BUILD_REF_NAME
+   VIRTUAL_HOST: $CI_PROJECT_NAME.staging.motius.de
 # ---------------------------------------------------------------------------------------------- #
 # ---------------------------------------- CLEAN ----------------------------------------------- #
 # ---------------------------------------------------------------------------------------------- #
