--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,17 +3,14 @@ version: '2'
 services:
   db:
     image: "mongo:latest"
-    environment: 
-      NetworkName: motius_proxy
-      VIRTUAL_HOST: "mongo.${VIRTUAL_HOST}"
-      VIRTUAL_PORT: 27017
-      CERT_NAME: ""
     networks:
       - proxy
     expose: 
       - 27017
       
   bot:
+    environment:
+      MONGODB_URI: mongodb://db:27017
     build: .
     links:
       - db:mongo
