--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "botkit": "^0.5.4",
+    "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "mongodb": "^2.2.26",
     "mongoose": "^4.9.8",
