--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,7 +65,7 @@ logs:
 export:
     stage: deploy
     script:
-        - docker-compose exec db mongoexport --db test --collection traffic > export.json
+        - docker-compose exec db mongoexport --db test --collection responses > export.json
     artifacts:
         paths:
             - export.json
