--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,7 +65,7 @@ logs:
 export:
     stage: deploy
     script:
-        - docker-compose exec -T db mongoexport --db test --collection tickets > export.json
+        - docker-compose exec -T db mongodump --db test  > export.json
     artifacts:
         paths:
             - export.json
