--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,10 +65,10 @@ logs:
 export:
     stage: deploy
     script:
-        - docker-compose exec -T db mongodump --db test  > export.json
+        - docker-compose exec -T db mongodump --db test  -o /var/www/dump
     artifacts:
         paths:
-            - export.json
+            - /var/www/dump
     when: manual
     tags:
         - staging
