--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,7 +68,7 @@ export:
         - docker-compose exec -T db mongodump --db test
     artifacts:
         paths:
-            - dump/
+            - dump/*.*
     when: manual
     tags:
         - staging
