--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,10 +65,10 @@ logs:
 export:
     stage: deploy
     script:
-        - docker-compose exec -T db mongodump --db test
+        - docker-compose exec -T db mongodump --db test -o /
     artifacts:
         paths:
-            - dump/*.json
+            - *.json
     when: manual
     tags:
         - staging
