--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,7 +66,7 @@ export:
     stage: deploy
     script:
         - mkdir dump
-        - docker-compose exec -T db mongodump --db test 
+        - docker-compose exec -T db mongodump --db test --out dump
     artifacts:
         paths:
             - dump/
