--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,10 +66,10 @@ export:
     stage: deploy
     script:
         - mkdir dump
-        - docker-compose exec -T db mongodump --db test --out /dump
+        - docker-compose exec -T db mongodump --db test --out dump
     artifacts:
         paths:
-            - dump/*.*
+            - dump/
     when: manual
     tags:
         - staging
