--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,6 +65,7 @@ logs:
 export:
     stage: deploy
     script:
+        - mkdir dump
         - docker-compose exec -T db mongodump --db test --out dump
     artifacts:
         paths:
