--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "botkit": "^0.5.4",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
